tests/integration/snapshots/integration__conformance__y_string_three-byte-utf-8.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\u0821"]
stdout ---
["\u0821"]

stderr ---
