tests/integration/snapshots/integration__conformance__y_string_three-byte-utf-8.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdout ---
["\u0821"]
stderr ---
