tests/integration/snapshots/integration__conformance__y_string_two-byte-utf-8.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\u0123"]
stdout --- 
["\u0123"]
stderr --- 
<empty>
