tests/integration/snapshots/integration__conformance__y_string_u+2028_line_sep.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[" "]
stdout ---
[" "]

stderr ---
