tests/integration/snapshots/integration__conformance__y_string_u+2029_par_sep.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 0
success: true
stdout ---
[" "]
stderr ---
