tests/integration/snapshots/integration__conformance__y_string_uescape.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\u0061\u30af\u30EA\u30b9"]
stdout ---
["\u0061\u30af\u30EA\u30b9"]

stderr ---
